--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "bulid:dev": "webpack",
     "bulid:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js",
+    "heroku-postbulid": "yarn run bulid-prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -21,6 +23,7 @@
     "bulid": "^1.0.0",
     "css-loader": "0.28.4",
     "dev-server": "^0.0.2",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
