--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest",
     "start": "node server/server.js",
-    "heroku-postbulid": "yarn run bulid-prod"
+    "heroku-postbulid": "yarn run bulid:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -25,8 +25,6 @@
     "dev-server": "^0.0.2",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -43,7 +41,11 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
+    "jest": "20.0.4",
+    "live-server": "^1.2.0",
     "webpack-dev-server": "2.5.1"
   }
 }
